# Object-Oriented-Programming

./: Ardit  C.c  CMakeLists.txt  main.cpp
Auditory_Exercises/1.Structures_in_C/: Structures.docx  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
Auditory_Exercises/10.StaticMembers_And_Exceptions/: task1.cpp  task2.cpp  task3.cpp
Auditory_Exercises/2.Introduction_in_C++/: Introduction to C++.docx  task1.cpp  task2.cpp
Auditory_Exercises/3.Classes/: task1.cpp  task2.cpp  task3.cpp
Auditory_Exercises/4.Composition/: task1.cpp  task2.cpp
Auditory_Exercises/5.Friend_functions,_dynamic_memory_allocation/: task1.cpp  task2.cpp  task3.cpp
Auditory_Exercises/6.Operators/: task1.cpp  task2.cpp  task3.cpp
Auditory_Exercises/7.Inheritance/: task1.cpp  task2.cpp
Auditory_Exercises/8.Polymorphism/: task1.cpp  task2.cpp  task3.cpp
Auditory_Exercises/9.Multiple_Inheritance/: task1.cpp  task2.cpp  task3.cpp
Exams/: EN_Texts_And_TestCases.docx
Exams/1st_Midterm/EN/: Holy tree  task13_EN.cpp  task17_EN.cpp  task20_EN.cpp  task21_EN.c  task26_EN.c  task27_EN.c  task28_EN.c  task5_EN.cpp  task8_EN.c  task9_EN.c
Exams/1st_Midterm/MK/: MK_Texts_And_TestCases.docx  task10_MK.cpp  task11_MK.cpp  task12_MK.cpp  task13_MK.cpp  task14_MK.cpp  task15_MK.c  task16_MK.c  task17_MK.cpp  task18_MK.cpp  task1_MK.cpp  task20_MK.c  task21_MK.c  task22_MK.c  task2_MK.cpp  task3_MK.cpp  task4_MK.cpp  task5_MK.cpp  task6_MK.cpp  task7_MK.c  task8_MK.c  task9_MK.cpp
Exams/1st_Midterm/Midterm_2023/: MKMidterm_task1.c  MKMidterm_task2.cpp  Midterm_Texts_And_TestCases.docx  MyMidterm_taks1.c
Exams/2nd_Midterm_Exam/: Operators  Operators.cpp
Exams/2nd_Midterm_Exam/EN/: File  add1.cpp  add2.cpp  task10_EN.cpp  task11_EN.cpp  task12_EN.cpp  task14_EN.cpp  task15_EN.cpp  task16_EN.cpp  task18_EN.cpp  task19_EN.cpp  task1_EN.cpp  task22_EN.cpp  task23_EN.cpp  task24_EN.cpp  task25_EN.cpp  task2_EN.cpp  task3_EN.cpp  task4_EN.cpp  task6_EN.cpp  task7_EN.cpp
Exams/2nd_Midterm_Exam/MK/: MK_Texts_And_TestCases.docx  task10_MK.cpp  task11_MK.cpp  task12_MK.cpp  task13_MK.cpp  task14_MK.cpp  task15_MK.cpp  task16_MK.cpp  task17_MK.cpp  task1_MK.cpp  task2_MK.cpp  task3_MK.cpp  task4_MK.cpp  task5_MK.cpp  task6_MK.cpp  task7_MK.cpp  task8_MK.cpp  task9_MK.cpp
Exams/2nd_Midterm_Exam/Midterm_2023/: Midterm_Texts_And_TestCases.docx  task1.cpp  task2.cpp
Lab_Exercises/: Texts_And_TestCases.docx
Lab_Exercises/Lab_1/: task1.c  task2.c  task3.c
Lab_Exercises/Lab_10/: Lab10.docx  task1.cpp  task2.cpp
Lab_Exercises/Lab_2/: task1.cpp  task2.cpp  task3.cpp
Lab_Exercises/Lab_3/: task1.cpp  task2.cpp  task3.cpp
Lab_Exercises/Lab_4/: task1.cpp  task2.cpp
Lab_Exercises/Lab_5/: task1.c  task2.cpp
Lab_Exercises/Lab_6/: task1.cpp  task2.cpp
Lab_Exercises/Lab_7/: task1.cpp  task2.cpp
Lab_Exercises/Lab_8/: task1.cpp  task2.cpp
Lab_Exercises/Lab_9/: task1.cpp  task2.cpp
Lab_Exercises/Other_Labs/: task1.c  task2.c  task3.c
Recordings/: Recordings.txt  Снимки - Стефан Андонов.url
TestCase/: Excpected  General_Test_Case_Tester.c  Got  Input  Line_Detector_Test_Case_Tester.c
