cmake_minimum_required(VERSION 3.23)
project(Programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programming main.cpp)
add_executable(C C.c)


add_executable(task1.1 Auditory_Exercises/1.Structures_in_C/task1.c)
add_executable(task2.1 Auditory_Exercises/1.Structures_in_C/task2.c)
add_executable(task3.1 Auditory_Exercises/1.Structures_in_C/task3.c)
add_executable(task4.1 Auditory_Exercises/1.Structures_in_C/task4.c)
add_executable(task5.1 Auditory_Exercises/1.Structures_in_C/task5.c)
add_executable(task6.1 Auditory_Exercises/1.Structures_in_C/task6.c)
add_executable(task1.2 Auditory_Exercises/2.Introduction_in_C++/task1.cpp)
add_executable(task2.2 Auditory_Exercises/2.Introduction_in_C++/task2.cpp)
add_executable(task1.3 Auditory_Exercises/3.Classes/task1.cpp)
add_executable(task2.3 Auditory_Exercises/3.Classes/task2.cpp)
add_executable(task3.3 Auditory_Exercises/3.Classes/task3.cpp)
add_executable(task1.4 Auditory_Exercises/4.Composition/task1.cpp)
add_executable(task2.4 Auditory_Exercises/4.Composition/task2.cpp)
add_executable(task1.5 Auditory_Exercises/5.Friend_functions,_dynamic_memory_allocation/task1.cpp)
add_executable(task2.5 Auditory_Exercises/5.Friend_functions,_dynamic_memory_allocation/task2.cpp)
add_executable(task3.5 Auditory_Exercises/5.Friend_functions,_dynamic_memory_allocation/task3.cpp)
add_executable(task1.6 Auditory_Exercises/6.Operators/task1.cpp)
add_executable(task2.6 Auditory_Exercises/6.Operators/task2.cpp)
add_executable(task3.6 Auditory_Exercises/6.Operators/task3.cpp)
add_executable(task1.7 Auditory_Exercises/7.Inheritance/task1.cpp)
add_executable(task2.7 Auditory_Exercises/7.Inheritance/task2.cpp)
add_executable(task1.8 Auditory_Exercises/8.Polymorphism/task1.cpp)
add_executable(task2.8 Auditory_Exercises/8.Polymorphism/task2.cpp)
add_executable(task3.8 Auditory_Exercises/8.Polymorphism/task3.cpp)
add_executable(task1.9 Auditory_Exercises/9.Multiple_Inheritance/task1.cpp)
add_executable(task2.9 Auditory_Exercises/9.Multiple_Inheritance/task2.cpp)
add_executable(task3.9 Auditory_Exercises/9.Multiple_Inheritance/task3.cpp)
add_executable(task1.10 Auditory_Exercises/10.StaticMembers_And_Exceptions/task1.cpp)
add_executable(task2.10 Auditory_Exercises/10.StaticMembers_And_Exceptions/task2.cpp)
add_executable(task3.10 Auditory_Exercises/10.StaticMembers_And_Exceptions/task3.cpp)

add_executable(MyMidterm_task1 Exams/1st_Midterm/Midterm_2023/MyMidterm_taks1.c)
add_executable(MyMidterm_task2 Exams/1st_Midterm/Midterm_2023/MyMidterm_task2.cpp)
add_executable(MKMidterm_task1 Exams/1st_Midterm/Midterm_2023/MKMidterm_task1.c)
add_executable(MKMidterm_task2 Exams/1st_Midterm/Midterm_2023/MKMidterm_task2.cpp)

add_executable(task5_EN Exams/1st_Midterm/EN/task5_EN.cpp)
add_executable(task8_EN Exams/1st_Midterm/EN/task8_EN.c)
add_executable(task9_EN Exams/1st_Midterm/EN/task9_EN.c)
add_executable(task13_EN Exams/1st_Midterm/EN/task13_EN.cpp)
add_executable(task17_EN Exams/1st_Midterm/EN/task17_EN.cpp)
add_executable(task20_EN Exams/1st_Midterm/EN/task20_EN.cpp)
add_executable(task21_EN Exams/1st_Midterm/EN/task21_EN.c)
add_executable(task26_EN Exams/1st_Midterm/EN/task26_EN.c)
add_executable(task27_EN Exams/1st_Midterm/EN/task27_EN.c)
add_executable(task28_EN Exams/1st_Midterm/EN/task28_EN.c)
add_executable(task1_MK Exams/1st_Midterm/MK/task1_MK.cpp)
add_executable(task2_MK Exams/1st_Midterm/MK/task2_MK.cpp)
add_executable(task3_MK Exams/1st_Midterm/MK/task3_MK.cpp)
add_executable(task4_MK Exams/1st_Midterm/MK/task4_MK.cpp)
add_executable(task5_MK Exams/1st_Midterm/MK/task5_MK.cpp)
add_executable(task6_MK Exams/1st_Midterm/MK/task6_MK.cpp)
add_executable(task7_MK Exams/1st_Midterm/MK/task7_MK.c)
add_executable(task8_MK Exams/1st_Midterm/MK/task8_MK.c)
add_executable(task9_MK Exams/1st_Midterm/MK/task9_MK.cpp)
add_executable(task10_MK Exams/1st_Midterm/MK/task10_MK.cpp)
add_executable(task11_MK Exams/1st_Midterm/MK/task11_MK.cpp)
add_executable(task12_MK Exams/1st_Midterm/MK/task12_MK.cpp)
add_executable(task13_MK Exams/1st_Midterm/MK/task13_MK.cpp)
add_executable(task14_MK Exams/1st_Midterm/MK/task14_MK.cpp)
add_executable(task15_MK Exams/1st_Midterm/MK/task15_MK.c)
add_executable(task16_MK Exams/1st_Midterm/MK/task16_MK.c)
add_executable(task17_MK Exams/1st_Midterm/MK/task17_MK.cpp)
add_executable(task18_MK Exams/1st_Midterm/MK/task18_MK.cpp)
add_executable(task19_MK Exams/1st_Midterm/MK/task19_MK.cpp)
add_executable(task20_MK Exams/1st_Midterm/MK/task20_MK.c)
add_executable(task21_MK Exams/1st_Midterm/MK/task21_MK.c)
add_executable(task22_MK Exams/1st_Midterm/MK/task22_MK.c)

add_executable(My2ndMidterm_task1 Exams/2nd_Midterm_Exam/Midterm_2023/task1.cpp)
add_executable(My2ndMidterm_task2 Exams/2nd_Midterm_Exam/Midterm_2023/task2.cpp)

add_executable(task1_EN Exams/2nd_Midterm_Exam/EN/task1_EN.cpp)
add_executable(task2_EN Exams/2nd_Midterm_Exam/EN/task2_EN.cpp)
add_executable(task3_EN Exams/2nd_Midterm_Exam/EN/task3_EN.cpp)
add_executable(task4_EN Exams/2nd_Midterm_Exam/EN/task4_EN.cpp)
add_executable(task6_EN Exams/2nd_Midterm_Exam/EN/task6_EN.cpp)
add_executable(task7_EN Exams/2nd_Midterm_Exam/EN/task7_EN.cpp)
add_executable(task10_EN Exams/2nd_Midterm_Exam/EN/task10_EN.cpp)
add_executable(task11_EN Exams/2nd_Midterm_Exam/EN/task11_EN.cpp)
add_executable(task12_EN Exams/2nd_Midterm_Exam/EN/task12_EN.cpp)
add_executable(task14_EN Exams/2nd_Midterm_Exam/EN/task14_EN.cpp)
add_executable(task15_EN Exams/2nd_Midterm_Exam/EN/task15_EN.cpp)
add_executable(task16_EN Exams/2nd_Midterm_Exam/EN/task16_EN.cpp)
add_executable(task18_EN Exams/2nd_Midterm_Exam/EN/task18_EN.cpp)
add_executable(task19_EN Exams/2nd_Midterm_Exam/EN/task19_EN.cpp)
add_executable(task22_EN Exams/2nd_Midterm_Exam/EN/task22_EN.cpp)
add_executable(task23_EN Exams/2nd_Midterm_Exam/EN/task23_EN.cpp)
add_executable(task24_EN Exams/2nd_Midterm_Exam/EN/task24_EN.cpp)
add_executable(task25_EN Exams/2nd_Midterm_Exam/EN/task25_EN.cpp)
add_executable(add1_EN Exams/2nd_Midterm_Exam/EN/add1.cpp)
add_executable(add2_EN Exams/2nd_Midterm_Exam/EN/add2.cpp)
add_executable(task1_MK_2nd Exams/2nd_Midterm_Exam/MK/task1_MK.cpp)
add_executable(task2_MK_2nd Exams/2nd_Midterm_Exam/MK/task2_MK.cpp)
add_executable(task3_MK_2nd Exams/2nd_Midterm_Exam/MK/task3_MK.cpp)
add_executable(task4_MK_2nd Exams/2nd_Midterm_Exam/MK/task4_MK.cpp)
add_executable(task5_MK_2nd Exams/2nd_Midterm_Exam/MK/task5_MK.cpp)
add_executable(task6_MK_2nd Exams/2nd_Midterm_Exam/MK/task6_MK.cpp)
add_executable(task7_MK_2nd Exams/2nd_Midterm_Exam/MK/task7_MK.cpp)
add_executable(task8_MK_2nd Exams/2nd_Midterm_Exam/MK/task8_MK.cpp)
add_executable(task9_MK_2nd Exams/2nd_Midterm_Exam/MK/task9_MK.cpp)
add_executable(task10_MK_2nd Exams/2nd_Midterm_Exam/MK/task10_MK.cpp)
add_executable(task11_MK_2nd Exams/2nd_Midterm_Exam/MK/task11_MK.cpp)
add_executable(task12_MK_2nd Exams/2nd_Midterm_Exam/MK/task12_MK.cpp)
add_executable(task13_MK_2nd Exams/2nd_Midterm_Exam/MK/task13_MK.cpp)
add_executable(task14_MK_2nd Exams/2nd_Midterm_Exam/MK/task14_MK.cpp)
add_executable(task15_MK_2nd Exams/2nd_Midterm_Exam/MK/task15_MK.cpp)
add_executable(task16_MK_2nd Exams/2nd_Midterm_Exam/MK/task16_MK.cpp)
add_executable(task17_MK_2nd Exams/2nd_Midterm_Exam/MK/task17_MK.cpp)


add_executable(Lab1.1 Lab_exercises/Lab_1/task1.c)
add_executable(Lab1.2 Lab_exercises/Lab_1/task2.c)
add_executable(Lab1.3 Lab_exercises/Lab_1/task3.c)
add_executable(Lab2.1 Lab_exercises/Lab_2/task1.cpp)
add_executable(Lab2.2 Lab_exercises/Lab_2/task2.cpp)
add_executable(Lab2.3 Lab_exercises/Lab_2/task3.cpp)
add_executable(Lab3.1 Lab_exercises/Lab_3/task1.cpp)
add_executable(Lab3.2 Lab_exercises/Lab_3/task2.cpp)
add_executable(Lab3.3 Lab_exercises/Lab_3/task3.cpp)
add_executable(Lab4.1 Lab_exercises/Lab_4/task1.cpp)
add_executable(Lab4.2 Lab_exercises/Lab_4/task2.cpp)
add_executable(Lab5.1 Lab_Exercises/Lab_5/task1.c)
add_executable(Lab5.2 Lab_exercises/Lab_5/task2.cpp)
add_executable(Lab6.1 Lab_exercises/Lab_6/task1.cpp)
add_executable(Lab6.2 Lab_exercises/Lab_6/task2.cpp)
add_executable(Lab7.1 Lab_Exercises/Lab_7/task1.cpp)
add_executable(Lab7.2 Lab_Exercises/Lab_7/task2.cpp)
add_executable(Lab8.1 Lab_Exercises/Lab_8/task1.cpp)
add_executable(Lab8.2 Lab_Exercises/Lab_8/task2.cpp)
add_executable(Lab9.1 Lab_Exercises/Lab_9/task1.cpp)
add_executable(Lab9.2 Lab_Exercises/Lab_9/task2.cpp)
add_executable(Lab10.1 Lab_Exercises/Lab_10/task1.cpp)
add_executable(Lab10.2 Lab_Exercises/Lab_10/task2.cpp)

add_executable(Lab_Other.1 Lab_Exercises/Other_Labs/task1.c)
add_executable(Lab_Other.2 Lab_Exercises/Other_Labs/task2.c)
add_executable(Lab_Other.3 Lab_Exercises/Other_Labs/task3.c)


add_executable(TestCase TestCase/General_Test_Case_Tester.c)
add_executable(TESTCASE1 TestCase/Line_Detector_Test_Case_Tester.c)
add_executable(Operators Exams/2nd_Midterm_Exam/Operators.cpp)
